--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,17 @@
 [tool.poetry]
-name = "example-kubeflow-CrossSell"
+name = "example-kubeflow-dcase"
 version = "0.0.0"
 description = ""
 authors = ["Phil Winder <phil@WinderResearch.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.7,<3.10"
 kfp = "1.4.0"
+matplotlib = "3.4.1"
+scipy = "1.6.3"
+scikit-learn = "0.24.2"
+librosa = "0.8.0"
+
 
 [tool.poetry.dev-dependencies]
 coverage = "5.5"
